--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ nav:
   tags: '/tags.html'
 
 # Author 配置博主信息
-author: '廖柯宇'
-nickname: '悟空'
+author: '雅雪'
+nickname: '大设计师'
 bio: '前端开发者，热爱技术&设计，简单乐观爱创造'
 avatar: 'assets/img/profile.png'
 
